--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  /* outline: 1px solid rgba(255, 0, 0, 0.281); */
+}
+.pc-none {
+  display: none;
+}
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 4rem;
+}
+button {
+  outline: none;
+  border: none;
+  background-color: unset;
+}
+a {
+  text-decoration: none;
+  color: unset;
+}
+@media (max-width: 1023px) {
+  .pc-none {
+    display: initial;
+  }
+}
+@media (max-width: 319px) {
+  html {
+    font-size: 9px;
+  }
+}
+/* Small Mobiles */
+@media (max-width: 374px) and (min-width: 320px) {
+  html {
+    font-size: 10px;
+  }
+}
+/* Medium Large Mobiles */
+@media (max-width: 584px) and (min-width: 375px) {
+  html {
+    font-size: 12px;
+  }
+}
+/* large Mobile & Tablets */
+@media (max-width: 849px) and (min-width: 585px) {
+  html {
+    font-size: 13px;
+  }
+}
+/* ---For Screens--- */
+/* Screens */
+@media (min-width: 1024px) and (max-width: 1279px) {
+  html {
+    font-size: 13px;
+  }
+}
+@media (min-width: 1280px) and (max-width: 1439px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media (min-width: 1440px) and (max-width: 1569px) {
+  html {
+    font-size: 15px;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 1570px) and (max-width: 1759px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1760px) and (max-width: 1919px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media (min-width: 1920px) and (max-width: 2500px) {
+  html {
+    font-size: 20px;
+  }
+}
+@media (min-width: 2501px) and (max-width: 3200px) {
+  html {
+    font-size: 28px;
+  }
+}
+@media (min-width: 3201px) {
+  html {
+    font-size: 34px;
+  }
 }
